--- a/systemd/mcdev.service
+++ b/systemd/mcdev.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Minecraft Dev Server
-After=syslog.target
-After=network.target
+Wants=network-online.target
+BindsTo=mariadb.service
 
 [Service]
 Type=forking
@@ -18,3 +18,6 @@ WorkingDirectory=/home/minecraft/multicraft/servers/server6
 
 Restart=always
 RestartSec=30
+
+[Install]
+WantedBy=multi-user.target
